ags (0.7.42)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed dead-lock caused by adjusting buffer size or samplerate as reading config from file

ags (0.7.41)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ommiting delayed playback in ags_play_notation_audio_run.c
	* fixed crash during load of lv2 directories without manifest.ttl
	* fixed don't queue draw destroyed widgets
	* fixed remove audio from soundcard as destroying AgsMachine
	* fixed crash during playback after destroy of AgsMachine NOTE: see below
	* NOTE: you have to do proper clean the audio tree

ags (0.7.40)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed zero-length notes in ags_note_duplicate() and return NULL
	* fixed negative-length notes in ags_note_duplicate() by swapping x values
	* fixed encoding special char of strings in ags_turtle.c
	* fixed AgsNotebook fixed width to resizeable
	* fixed use of previous value on reenter loop in automation
	* improved regexp to read string literals in ags_turtle.c
	* improved AgsLineMember and AgsBulkMember to escape their strings
	* implemented resize of AgsNotebook previously it was fixed size
	* implemented abort on not present plugin during file open since you will damage your file

ags (0.7.39)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsLv2Worker to return from AgsReturnableThread
	* fixed some memory leaks in ags_recall_lv2_run.c
	* fixed annoying painting mistake in ags_meter.c missing padding caused ugly effect on top
	* fixed AGS_MACHINE_SELECTOR_SHOW_REVERSE_MAPPING and AGS_MACHINE_SELECTOR_SHOW_SHIFT_PIANO are removed from ags_automation_editor.c because it is not supported
	* improved AgsThreadPool to take from the end of the list because previously it took the ones just instantiated

ags (0.7.38)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed remove of effects because refactoring broke it